Avoid unwanted horizontal scrolling

Summary:
It looks like the horizontal scrolling is a bit too sensitive while
also scrolling vertically. This patch disables horizontal scrolling
if the vertical wheel event value is larger than the horizontal.

BUG: 415096

Subscribers: kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D26071